# tailscale-rs

./: .gitignore  .rustfmt.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: c.yml  ci.yml  elixir.yml  nix.yml
checks/: Cargo.toml
checks/src/: lints_enabled.rs  main.rs
examples/: peer_ping.rs
examples/axum/: main.rs
examples/axum/www/: index.html
examples/peer_ping/: main.rs
examples/tcp_echo/: main.rs
nix/: crate.nix  deps.nix
src/: axum.rs  config.rs  error.rs  lib.rs
supply-chain/: config.toml
ts_array256/: Cargo.toml
ts_array256/src/: lib.rs  storage.rs
ts_bart/: Cargo.toml  INTERNALS.md  README.md
ts_bart/benches/: table.rs  table_mut.rs
ts_bart/benches/common/: load_tables.rs  matrix.rs  mod.rs
ts_bart/proptest-regressions/node/: api.txt  iter.txt
ts_bart/src/: allot.rs  base_index.rs  lib.rs  lpm.rs  test_util.rs
ts_bart/src/iptrie/: insert.rs  mod.rs  modify.rs  remove.rs  util.rs
ts_bart/src/node/: child.rs  child_storage.rs  descendants.rs  mod.rs
ts_bart_packetfilter/: Cargo.toml
ts_bart_packetfilter/proptest-regressions/: dst_port.txt  lib.txt
ts_bart_packetfilter/proptest-regressions/port_trie/: port_prefix.txt
ts_bart_packetfilter/src/: cap_lookup.rs  dst_port.rs  lib.rs
ts_bart_packetfilter/src/port_trie/: mod.rs  port_prefix.rs
ts_bitset/: Cargo.toml
ts_bitset/benches/: bitset256.rs
ts_bitset/proptest-regressions/: lib.txt
ts_bitset/src/: lib.rs  rank.rs  traits.rs
ts_capabilityversion/: Cargo.toml
ts_capabilityversion/src/: lib.rs
ts_cli_util/: Cargo.toml
ts_cli_util/src/: config.rs  lib.rs
ts_control/: Cargo.toml
ts_control/src/: config.rs  control_dialer.rs  derp.rs  dial_plan.rs  lib.rs  map_request_builder.rs  node.rs
ts_control_noise/: Cargo.toml
ts_control_noise/src/: cipher.rs  error.rs  handshake.rs  io.rs  lib.rs  messages.rs
ts_control_serde/: Cargo.toml
ts_control_serde/src/: client_version.rs  debug.rs  derp_map.rs  dial_plan.rs  dns.rs  env_type.rs  host_info.rs  lib.rs  location.rs  net_info.rs  netmap.rs  node.rs  ping.rs  register.rs  service.rs  tka_info.rs  tpm.rs  user.rs  util.rs
ts_control_serde/tests/: parsing_tests.rs
ts_control_serde/tests/data/: map_response.json  node.json
ts_dataplane/: Cargo.toml
ts_dataplane/src/: async_tokio.rs  lib.rs
ts_devtools/: Cargo.toml
ts_disco_protocol/: Cargo.toml
ts_disco_protocol/src/: call_me_maybe.rs  endpoint.rs  error.rs  header.rs  lib.rs  message_type.rs  packet.rs  ping.rs  pong.rs
ts_dynbitset/: Cargo.toml
ts_dynbitset/proptest-regressions/: lib.txt
ts_dynbitset/src/: lib.rs
ts_elixir/: .gitignore  README.md  mix.exs
ts_elixir/lib/: tailscale.ex
ts_elixir/native/ts_elixir/: Cargo.toml
ts_elixir/native/ts_elixir/src/: lib.rs  tcp.rs  udp.rs
ts_elixir/test/: basic_test.exs
ts_ffi/examples/: Makefile  lookup_peer.c  tcp_echo.c  udp_ping.c
ts_ffi/src/: config.rs  keys.rs  lib.rs  util.rs
ts_hexdump/: Cargo.toml
ts_hexdump/src/: lib.rs
ts_http_util/: Cargo.toml
ts_http_util/src/: client.rs  error.rs  http1.rs  http2.rs  lib.rs
ts_keys/: Cargo.toml
ts_keys/src/: keystate.rs  lib.rs  macros.rs
ts_netcheck/: Cargo.toml
ts_netcheck/src/: derp_latency.rs  https.rs  lib.rs  stun.rs
ts_netstack_smoltcp/: Cargo.toml
ts_netstack_smoltcp/benches/: throughput_tcp.rs  throughput_udp.rs
ts_netstack_smoltcp/examples/: tcp_connect_tun.rs  tcp_connect_tun_async.rs  tcp_listen_tun.rs  tcp_listen_tun_async.rs  tcp_pingpong_pipe.rs  tcp_pingpong_pipe_async.rs  udp_tun.rs  udp_tun_async.rs
ts_netstack_smoltcp/src/: lib.rs  pipe.rs  run.rs  std_clock.rs  tun_rs_device.rs
ts_netstack_smoltcp_core/: Cargo.toml
ts_netstack_smoltcp_core/src/: lib.rs  stack_control_impl.rs
ts_netstack_smoltcp_core/src/command/: channel.rs  error.rs  mod.rs  request.rs
ts_netstack_smoltcp_core/src/command/tcp/: stream.rs
ts_netstack_smoltcp_core/src/socket_impl/: mod.rs  raw.rs  udp.rs
ts_netstack_smoltcp_core/src/socket_impl/tcp/: listener.rs  stream.rs
ts_netstack_smoltcp_core/tests/: udp.rs
ts_netstack_smoltcp_socket/: Cargo.toml
ts_netstack_smoltcp_socket/src/: create_socket.rs  lib.rs  raw.rs  udp.rs
ts_netstack_smoltcp_socket/src/tcp/: listener.rs  stream.rs
ts_nodecapability/: Cargo.toml
ts_nodecapability/src/: lib.rs
ts_overlay_router/: Cargo.toml
ts_overlay_router/src/: inbound.rs  lib.rs  outbound.rs
ts_packet/: Cargo.toml
ts_packet/src/: basic.rs  buf.rs  lib.rs  old.rs  raw.rs
ts_packetfilter/: Cargo.toml
ts_packetfilter/src/: checking_filter.rs  ip_proto.rs  lib.rs  rule.rs  state.rs
ts_packetfilter/src/filter/: map_impl.rs  mod.rs
ts_packetfilter_serde/: Cargo.toml
ts_packetfilter_serde/src/: cap_grant.rs  dst_port.rs  filter_rule.rs  ip_proto.rs  ip_range.rs  lib.rs  srcip.rs
ts_packetfilter_state/: Cargo.toml  anonymize_pf.py
ts_packetfilter_state/benches/: access.rs  sample_filter.json
ts_packetfilter_state/src/: lib.rs
ts_peercapability/: Cargo.toml
ts_peercapability/src/: lib.rs
ts_python/: Cargo.toml  README.md
ts_python/src/: key_state.rs  lib.rs  tcp.rs  udp.rs
ts_runtime/: Cargo.toml
ts_runtime/src/: control_runner.rs  dataplane.rs  derp_latency.rs  env.rs  error.rs  lib.rs  multiderp.rs  netstack_actor.rs  packetfilter.rs  peer_tracker.rs  route_updater.rs
ts_test_util/: Cargo.toml
ts_test_util/src/: lib.rs
ts_time/: Cargo.toml
ts_time/proptest-regressions/: lib.txt
ts_time/src/: lib.rs
ts_tls_util/: Cargo.toml
ts_tls_util/src/: lib.rs
ts_transport/: Cargo.toml
ts_transport/src/: lib.rs
ts_transport_derp/: Cargo.toml
ts_transport_derp/examples/: listen.rs  ping.rs
ts_transport_derp/src/: async_tokio.rs  dial.rs  lib.rs
ts_transport_tun/: Cargo.toml
ts_transport_tun/src/: async_tokio.rs  config.rs  lib.rs
ts_underlay_router/: Cargo.toml
ts_underlay_router/src/: lib.rs  outbound.rs
ts_wireguard/: Cargo.toml
ts_wireguard/examples/: handshake.rs
ts_wireguard/src/: endpoint.rs  handshake.rs  lib.rs
(+24 files in other folders)
