[package]
name = "ts_array256"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_bitset.workspace = true

# Unconditionally required dependencies.
heapless.workspace = true
static_assertions.workspace = true

# Required dependencies for the "smallvec" feature.
smallvec = { workspace = true, optional = true, features = ["const_generics", "const_new", "union"] }

[dev-dependencies]
lazy_static.workspace = true
proptest.workspace = true

[features]
smallvec = ["dep:smallvec"]

[lints]
workspace = true
