[package]
name = "ts_bitset"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Unconditionally required dependencies.
cfg-if.workspace = true
static_assertions.workspace = true

[dev-dependencies]
divan.workspace = true
proptest.workspace = true

[features]
default = ["lut"]
lut = []

[lints]
workspace = true

[[bench]]
name = "bitset256"
harness = false
