[package]
name = "ts_control_noise"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_capabilityversion.workspace = true
ts_hexdump.workspace = true
ts_keys.workspace = true
ts_packet.workspace = true

# Unconditionally required dependencies.
base64.workspace = true
bytes.workspace = true
chacha20poly1305 = "0.10"
noise-protocol = "0.2"
noise-rust-crypto = "0.6"
pin-project-lite.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util"] }
tracing.workspace = true
zerocopy.workspace = true
zeroize = "1.8"

[lints]
workspace = true
