[package]
name = "ts_control_serde"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_capabilityversion = { workspace = true, features = ["serde"] }
ts_keys = { workspace = true, features = ["serde"] }
ts_nodecapability = { workspace = true, features = ["serde"] }
ts_packetfilter_serde.workspace = true

# Unconditionally required dependencies.
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
ipnet = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json = { workspace = true, features = ["raw_value"] }
serde_with.workspace = true
serde_repr = "0.1"
url = { workspace = true, features = ["serde"] }

[lints]
workspace = true
