[package]
name = "ts_devtools"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
bytes.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
tracing.workspace = true

ts_cli_util.workspace = true
ts_keys.workspace = true
ts_packet.workspace = true
ts_packetfilter.workspace = true
ts_packetfilter_state.workspace = true
ts_transport.workspace = true
ts_transport_derp.workspace = true

[lints]
workspace = true
