[package]
name = "ts_disco_protocol"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
aead.workspace = true
thiserror.workspace = true
zerocopy.workspace = true
crypto_box.workspace = true

num-traits = "0.2"
num-derive = "0.4"

ts_keys.workspace = true

[dev-dependencies]
zerocopy = { workspace = true, features = ["std"] }

rand.workspace = true

[lints]
workspace = true

[features]
default = ["alloc"]
alloc = []
