[package]
name = "ts_dynbitset"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_bitset.workspace = true

# Unconditionally required dependencies.
smallvec = { workspace = true, features = ["const_generics", "const_new"] }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
