[package]
name = "ts_keys"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
thiserror.workspace = true
zerocopy.workspace = true
serde = { workspace = true, optional = true }
x25519-dalek.workspace = true
crypto_box.workspace = true

[features]
serde = ["dep:serde"]

[lints]
workspace = true
