[package]
name = "ts_netstack_smoltcp_core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
flume = { workspace = true }
tracing = { workspace = true }
bytes.workspace = true
heapless_0_8 = { package = "heapless", version = "0.8" }
thiserror = { workspace = true }

[dependencies.smoltcp]
workspace = true
default-features = false
features = [
    "alloc",
    "proto-ipv6",
    "proto-ipv6-fragmentation",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "medium-ip",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-raw",
]

[dev-dependencies]
ts_cli_util.workspace = true
tracing-panic = { version = "0.1", features = ["capture-backtrace"] }

[dev-dependencies.smoltcp]
version = "0.12"
default-features = false
features = [
    "alloc",
    "proto-ipv6",
    "proto-ipv6-fragmentation",
    "proto-ipv4",
    "proto-ipv4-fragmentation",
    "medium-ip",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-raw",
    "iface-max-addr-count-4",
    "log",
    "verbose",
]

[features]
# provide From<Error> for std::io::Error
std = []
