[package]
name = "ts_netstack_smoltcp_socket"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
bytes.workspace = true
tracing.workspace = true

ts_netstack_smoltcp_core = { workspace = true }

tokio = { workspace = true, optional = true }
futures-io = { version = "0.3", optional = true }

[features]
tokio = ["dep:tokio", "std"]
futures-io = ["dep:futures-io", "std"]
std = ["ts_netstack_smoltcp_core/std"]
