[package]
name = "ts_nodecapability"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Unconditionally required dependencies.
cfg-if.workspace = true

# Required dependencies for the "serde" feature.
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true, features = ["raw_value"] }

[features]
serde = ["dep:serde", "dep:serde_json"]

[lints]
workspace = true
