[package]
name = "ts_overlay_router"
version = "0.1.0"

edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
ts_bart.workspace = true
ts_keys.workspace = true
ts_packet.workspace = true
ts_transport.workspace = true

itertools.workspace = true
tracing.workspace = true

[lints]
workspace = true
