[package]
name = "ts_packetfilter_state"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_packetfilter.workspace = true
ts_packetfilter_serde.workspace = true

[dev-dependencies]
divan.workspace = true
serde_json.workspace = true
ts_bart_packetfilter = { workspace = true }
ts_packetfilter = { workspace = true, features = ["std"] }

[lints]
workspace = true

[[bench]]
name = "access"
harness = false
