[package]
name = "ts_peercapability"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, optional = true }
url.workspace = true

[features]
serde = ["dep:serde"]

[lints]
workspace = true
