[package]
name = "ts_tls_util"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Unconditionally required dependencies.
tokio.workspace = true
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
url.workspace = true
webpki-roots = { version = "1.0" }

[lints]
workspace = true
