[package]
name = "ts_transport_tun"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
# Our crates.
ts_hexdump.workspace = true
ts_packet.workspace = true
ts_transport.workspace = true

# Unconditionally required dependencies.
bytes.workspace = true
ipnet.workspace = true
thiserror.workspace = true
tracing.workspace = true
tun-rs = { version = "2.7", features = ["async"] }

# Required dependencies for the "serde" feature.
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]

[lints]
workspace = true
