[package]
name = "ts_elixir"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
rustler = "0.37.2"

tailscale = { workspace = true }
ts_cli_util = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true
